# pvz_cpp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
binding/: python_wrapper.cpp
core/binding/: python_wrapper.cpp
core/include/base/: GameObject.h
core/include/common/: Constants.h  Constants.hpp  Types.h  Types.hpp  Utils.h  Utils.hpp
core/include/entities/: GameObject.h
core/include/framework/: Engine.h
core/src/core/: Engine.cpp
core/src/entities/: GameObject.cpp
core/src/framework/: Engine.cpp
data/plants/: peashooter.yaml
scripts/: __init__.py  __main__.py  _env.py  _init_env.py  config.py  game.py  main.py  pvz_core.pyi
scripts/core/: __init__.py  pvz_core.py  wrapper.py
tests/: test_env.py
